Fixing members table for smaller sizes.  Hide when screen is too small to display reasonably.

--- a/ourinternet/static/sass/_variables.scss
+++ b/ourinternet/static/sass/_variables.scss
@@ -26,5 +26,5 @@ $twitter_bird_url: url(/static/img/twitter.png);
 $small: 30em; //480px;
 $medium: 48em; // 768px;
 $large: 61.25em; //980px;
-$extra-large: 75em; //1200px;
+$extra-large: 67.5em; //1200px;
 
